Cambios en vistas, sistema de wallets y balance

--- a/templates/comercio_cripto.html
+++ b/templates/comercio_cripto.html
@@ -35,7 +35,7 @@
         }
 
         .amarillo {
-            color: yellow;
+            color: #ffc107;
         }
     </style>
     <title>Trade | Mafiance</title>
@@ -43,7 +43,7 @@
 
 <body>
     <section class="negro blanco">
-        <form class="container" action="">
+        <form class="container" action="/add/MFC">
             <div class="row fmagenta py-3 pt-3" style="border-radius: 20px;">
                 <div class="col-4 pt-5 px-5">
                     <a href="/index" class="blanco text-decoration-none">
@@ -56,7 +56,7 @@
                     <h6>1 MFC = 1 USDT</h6>
                 </div>
                 <div class="col-4 text-end pt-5 px-5" style="border-radius: 20px;">
-                    <a href="/" class="text-decoration-none blanco">
+                    <a href="/" class="text-decoration-none amarillo">
                         <h3>Vender</h3>
                     </a>
                 </div>
@@ -69,10 +69,10 @@
                 <div class="col-4 py-5 text-center">
                     <input class="form-control me-2 text-center" type="search" placeholder="0 USDT" name="quantity"
                         aria-label="#">
-                    <p style="color:gray;">100.00 MFC - 100.00 USDT</p>
+                    <p class="amarillo pt-3">100.00 MFC - 100.00 USDT</p>
                 </div>
                 <div class="col-4 py-5">
-                    <a href="/index" type="button" class="btn magenta btn-lg">⇵ MFC</a>
+                    <a href="/" type="button" class="btn magenta btn-lg">⇵ MFC</a>
                 </div>
             </div>
             <div class="row pb-5">
