--- a/templates/divisa.html
+++ b/templates/divisa.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <section class="negro blanco">
+    <section class="negro blanco pb-5">
         <form class="container" action="">
             <div class="row fmagenta py-3" style="border-radius: 20px;">
                 <div class=" col-4">
