--- a/templates/finished.html
+++ b/templates/finished.html
@@ -33,6 +33,10 @@
         .gris {
             background-color: #393939;
         }
+
+        .amarillo {
+            color: #ffc107;
+        }
     </style>
     <title>Welcome to Mafiance</title>
 </head>
@@ -60,7 +64,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col text-center pb-5" style="color: grey">
+                <div class="col text-center pb-5 amarillo">
                     <p>Si busca más información sobre nosotros puede contactar al consulado de Taiwán - República de
                         China.</p>
                     <p>No dude en dejarnos su tarjeta de crédito para ayudarlo con sus cuotas.</p>
