--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             <div class="row py-5">
                 <div class="col-6 pt-4 text-center cuadrados" style="border-radius: 30px;">
                     <h4>Balance total</h4>
-                    <h1>$500.00</h1>
+                    <h1>${{actualBalance['currency']}} {{actualBalance['balance']}} </h1>
                 </div>
                 <div class="col-6 magenta text-center cuadrados pt-3" style="border-radius: 30px;">
                     <h2>Mafiance Coin</h2>
