--- a/templates/login.html
+++ b/templates/login.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         {% endif %}
-        <form class="container blanco" action="/login/admins">
+        <form class="container blanco" action="/login/users">
             <div class="row">
                 <div class="col-12 py-5 text-end">
                     <a href="/" type="button" class="btn-close btn-close-white" aria-label="Close"></a>
