--- a/templates/p2pBuyer.html
+++ b/templates/p2pBuyer.html
@@ -63,7 +63,7 @@
 </head>
 
 <body>
-    <section class="negro">
+    <section class="negro pb-5">
         <div class="container fmagenta" style="border-radius: 20px;">
             <div class="row py-3">
                 <div class="col-4">
@@ -103,14 +103,9 @@
         <div class="container gris cuadrados blanco" style="border-radius: 20px;">
             <div class="row py-3 my-3">
                 <div class="col-2 pt-4">
-                    <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
-                        <a href="/p2pBuyer" type="radio" class="btn-check" name="btnradio" id="btnradio1"
-                            autocomplete="off" checked></a>
-                        <label class="btn btn-outline-light" for="btnradio1">Comprar</label>
-
-                        <a href="/p2pSeller" type="radio" class="btn-check" name="btnradio" id="btnradio2"
-                            autocomplete="off"></a>
-                        <label class="btn btn-outline-light" for="btnradio2">Vender</label>
+                    <div class="btn-group ">
+                        <a href="/p2pBuyer" class="btn btn-outline-light btn-lg active" aria-current="page">Comprar</a>
+                        <a href="/p2pSeller" class="btn btn-outline-light btn-lg">Vender</a>
                     </div>
                 </div>
                 <div class="col-8 text-center">
@@ -139,16 +134,16 @@
             <div class="row">
                 <div class="col">
                     <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                        <input type="radio" class="btn-check" name="USDT" id="btnradio1" autocomplete="off" checked>
                         <label class="btn btn-outline-light" for="btnradio1">USDT</label>
 
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <input type="radio" class="btn-check" name="BTC" id="btnradio2" autocomplete="off">
                         <label class="btn btn-outline-light" for="btnradio2">BTC</label>
 
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                        <input type="radio" class="btn-check" name="BNB" id="btnradio3" autocomplete="off">
                         <label class="btn btn-outline-light" for="btnradio3">BNB</label>
 
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <input type="radio" class="btn-check" name="ETH" id="btnradio4" autocomplete="off">
                         <label class="btn btn-outline-light" for="btnradio2">ETH</label>
 
                     </div>
