--- a/templates/p2pSeller.html
+++ b/templates/p2pSeller.html
@@ -109,25 +109,31 @@
                     </div>
                 </div>
                 <div class="col-8 text-center">
+                    <h1 class="magenta">Mafiance</h1>
                     <i class="fa-brands fa-redhat fa-5x"></i>
                 </div>
                 <div class="col-1 text-end px-4 pt-4">
-                    <button type="button" class="btn btn-outline-light position-relative">
-                        <i class="fa-solid fa-bullhorn fa-3x"></i>
-                        <span
-                            class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
-                            <span class="visually-hidden">New alerts</span>
-                        </span>
-                    </button>
+                    <a href="/anuncios">
+                        <button type="button" class="btn btn-outline-light position-relative">
+                            <i class="fa-solid fa-bullhorn fa-3x"></i>
+                            <h6 class="amarillo">Anuncios</h6>
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                                <span class="visually-hidden">New alerts</span>
+                            </span>
+                        </button>
+                    </a>
                 </div>
                 <div class="col-1 pt-4">
                     <a href="/orders" class="blanco">
                         <button type="button" class="btn btn-outline-light position-relative">
                             <i class="fa-solid fa-scroll fa-3x"></i>
+                            <h6 class="amarillo">Órdenes</h6>
                             <span
                                 class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
                                 <span class="visually-hidden">New alerts</span>
                             </span>
+                        </button>
                     </a>
                 </div>
             </div>
